first test commit lerning sprint1

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,9 +35,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/MyLearning
 endorsed.classpath=
 excludes=
+file.reference.junit-4.12.jar=F:\\office\\libs\\testing\\junit-4.12.jar
+file.reference.mockito-all-1.10.19.jar=F:\\office\\libs\\testing\\mockito-all-1.10.19.jar
+file.reference.mongo-java-driver-3.12.10.jar=F:\\office\\libs\\mongo-java-driver-3.12.10.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mongo-java-driver-3.12.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -50,23 +54,25 @@ javac.source=13
 javac.target=13
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${file.reference.junit-4.12.jar}:\
+    ${file.reference.mockito-all-1.10.19.jar}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
-javadoc.author=false
+javadoc.author=true
 javadoc.encoding=${source.encoding}
-javadoc.html5=false
+javadoc.html5=true
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
-javadoc.private=false
+javadoc.private=true
 javadoc.splitindex=true
 javadoc.use=true
-javadoc.version=false
-javadoc.windowtitle=
+javadoc.version=true
+javadoc.windowtitle=JIJO'S PGS
 # The jlink additional root modules to resolve
 jlink.additionalmodules=
 # The jlink additional command line parameters
@@ -78,6 +84,7 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.licensePath=./nbproject/licenseheader.txt
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
